[gd_scene load_steps=9 format=3 uid="uid://dv7uyas7jll47"]

[ext_resource type="Texture2D" uid="uid://cw8kt1o7ejr15" path="res://Assets/Icons/weather_icon_white.png" id="1_7w6i1"]
[ext_resource type="Script" uid="uid://g4yd00f1dda4" path="res://Scenes/farm_card.gd" id="1_an7vq"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="2_an7vq"]
[ext_resource type="Texture2D" uid="uid://cni5xa0825jvv" path="res://Assets/Icons/calendar_icon_white.png" id="3_l6k2y"]
[ext_resource type="FontFile" uid="uid://d1hefddkwf7sl" path="res://Assets/Fonts/argentum-sans.vf-regular.ttf" id="4_asxm1"]
[ext_resource type="Texture2D" uid="uid://wglmkc4g02dg" path="res://Assets/Background/auth_bg.png" id="5_wo7ia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ac43"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
shadow_color = Color(0, 0, 0, 0.192157)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7eo2e"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="FarmCard" type="Panel"]
custom_minimum_size = Vector2(650, 715)
anchors_preset = -1
anchor_right = 0.902778
anchor_bottom = 0.558594
offset_right = -650.0
offset_bottom = -715.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8ac43")
script = ExtResource("1_an7vq")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(586, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0492307
anchor_top = 0.0461539
anchor_right = 0.950769
anchor_bottom = 0.103497
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="BarButtonIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
modulate = Color(0.658824, 1, 0.0156863, 1)
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture = ExtResource("1_7w6i1")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="FarmName" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("2_an7vq")
theme_override_font_sizes/font_size = 32
text = "Strawberry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
modulate = Color(0.658824, 1, 0.0156863, 1)
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_l6k2y")
expand_mode = 1

[node name="CreatedAt" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 15
text = "July 7, 2025"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.135
anchor_right = 1.0
anchor_bottom = 0.137
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7eo2e")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.138462
anchor_right = 1.0
anchor_bottom = 0.668531
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wo7ia")
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(588, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.0
offset_top = -207.0
offset_right = 294.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "Crop type"

[node name="CropType" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "strawberry"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "Farm ID"

[node name="FarmID" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "5vadijdajd"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "Last updated"

[node name="UpdatedAt" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("4_asxm1")
theme_override_font_sizes/font_size = 20
text = "July 7, 2025"
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FarmButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="FarmButton" to="." method="_on_farm_button_pressed"]
